@@ -19,6 +19,7 @@ longer available.
 		  ----------------------------
 The following bugs have been fixed in the 1.6.0 release.
 
+K  6074	MimeMessage.updateHeaders should set the Date header if not already set
 K  6949	MailDateFormat changes for version 1.6
 K  7010	Fix javac warnings
 K  8398	MailSessionDefinition should use the Repeatable annotation for Java EE 8
